[package]
name = "floem-ui-kit"
description = "Ready-to-use UI components for the Floem GUI library"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pieterdd/floem-ui-kit"
include = ["/src", "/docs"]
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embed-doc-image = "0.1.4"
floem = { git = "https://github.com/lapce/floem", rev = "9fc98fd6789beb1accc7af25291321ae3d0d9542" }
im = "15.1.0"
num = "0.4.1"
strum = { version = "0.25.0", features = ["derive"] }

[workspace]
members = [
	"examples/counter",
	"examples/showcase",
]
