[package]
name = "floem-ui-kit"
description = "Ready-to-use UI components for the Floem GUI library"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pieterdd/floem-ui-kit"
include = ["/src", "/docs"]
categories = ["gui"]
keywords = ["gui", "graphics", "interface", "widgets", "floem-themes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embed-doc-image = "0.1.4"
floem = "0.1.1"
im = "15.1.0"
num = "0.4.1"
strum = { version = "0.25.0", features = ["derive"] }

[workspace]
members = [
	"examples/counter",
	"examples/showcase",
]
