[package]
name = "counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem-ui-kit = { path = "../.." }
floem = { git = "https://github.com/lapce/floem", rev = "9fc98fd6789beb1accc7af25291321ae3d0d9542" }
