[package]
name = "showcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem-ui-kit = { path = "../.." }
floem = { git = "https://github.com/lapce/floem", rev = "1c417d0ef87122f5baaf493db7db4351dba5d403" }
strum = { version = "0.25.0", features = ["derive"] }
